# ChangeLog for dev-util/netbeans
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070619185104.ebuild:
  Added info about failing compilation with 'doc' USE flag.

  20 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070619185104.ebuild:
  Attempt to fix javadoc compilation - still doesn't work. Removed
  monitor/loadgen-profiler-bridge from the experimental cluster build as it
  currently fails. Homefully fixed fperms on jruby files.

  20 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070619185104.ebuild:
  Added missing support for tomcat

  20 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-6.0_alpha10_pre20070608171640.ebuild,
  -netbeans-6.0_alpha10_pre20070611093109.ebuild,
  netbeans-6.0_alpha10_pre20070619185104.ebuild:
  Minor fixes. Old broken versions removed.

  20 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070619185104.ebuild:
  Some fixes.

  20 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  +netbeans-6.0_alpha10_pre20070619185104.ebuild:
  Version bump. Still testing this one.

  11 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070611093109.ebuild:
  fixed compilation of just nb platform

  11 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  +netbeans-6.0_alpha10_pre20070611093109.ebuild:
  Version bump

  10 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070608171640.ebuild:
  unbundled many src_compile jars

  09 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070608171640.ebuild:
  fixed jruby perms update

  09 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070608171640.ebuild:
  hopefully fixed that problem with nb startup

  09 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070608171640.ebuild: