@@ -78,6 +78,6 @@ DIST netbeans-xml-6.0-m10_pre20070619185104.tar.bz2 7707247 RMD160 f11d9d187af5d
 DIST netbeans-xtest-6.0-m10_pre20070619185104.tar.bz2 4710013 RMD160 5afbf9fa2592427d42745ba74e65c9a4d534c1ff SHA1 6ea6e06364c7b8118e94fafcd9f0d5b84385ddf7 SHA256 8f29542db3008e6cd3f5c943efb6b83c90e1d6fb83158997f946c6e772a59488
 DIST netbeans_mobility-5_5_1-linux.bin 52745216 RMD160 2058ac6701b47f378ead48851329420360169980 SHA1 844fc236667b5a3df57c6c1b195d246a900a6029 SHA256 a47e9ef5f2fdce60d2c6b65ad1e76be8b70257b89ae60dae1bdc33965e814f27
 EBUILD netbeans-5.5.1.ebuild 15257 RMD160 a6690d8fc51713e540d264b3c7de7dc6c1b8fa26 SHA1 ac9ceb18f01639ccf02e2a71d32f1749723ee54a SHA256 7ae84f3ad1d82ebd5d351cd806bb3c4abb8f185e9c21bf6618783ee0efad5158
-EBUILD netbeans-6.0_alpha10_pre20070619185104.ebuild 32020 RMD160 4fb9e4d89dd55965418dd7d8d18b974358994766 SHA1 80e6edcb781f4fb2e08299237d19a4d793fc0df7 SHA256 080c822a5c0a1cdc3825a4e681c0d3cfc6b5b6de91570fa17666b98fba374d0b
-MISC ChangeLog 17019 RMD160 43d575c086111da611e10a7a520655b378885e09 SHA1 b72635bc8de065e2cd678d997430c692cfc19b95 SHA256 c47d8b93444cd876e04e95fb5876025a77e4cbfc13cf861b2f789f9fb7602d78
+EBUILD netbeans-6.0_alpha10_pre20070619185104.ebuild 32129 RMD160 9c609ff3e682f20c96f985d2a026ea529ae8edd4 SHA1 94bd66c79b7a16238b435fd46fe8072c2512b92d SHA256 9be0ceec46c9ca8b9bd8b4cb7b9da0e1109e0bffb6909b82fb0809ab20a3e7cf
+MISC ChangeLog 17188 RMD160 16f7007ffdb19840823081f1f36ce13233c7734e SHA1 dba567fbae5c0d32dce9fcf0165bd9bd0d2fe4ac SHA256 d99bac395c85589451a48983fc1d9588d4c1ac7976d7bc0227934c90c9224eae
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
