@@ -2,6 +2,10 @@
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
+  netbeans-6.0_alpha10_pre20070619185104.ebuild:
+  Another attempt to fix the problem with update of perms on jruby
+
   20 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
   netbeans-6.0_alpha10_pre20070619185104.ebuild:
   Added info about failing compilation with 'doc' USE flag.
@@ -10,7 +14,7 @@
   netbeans-6.0_alpha10_pre20070619185104.ebuild:
   Attempt to fix javadoc compilation - still doesn't work. Removed
   monitor/loadgen-profiler-bridge from the experimental cluster build as it
-  currently fails. Homefully fixed fperms on jruby files.
+  currently fails. Hopefully fixed fperms on jruby files.
 
   20 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
   netbeans-6.0_alpha10_pre20070619185104.ebuild:
